# kopitiam

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  NOTICE  README.md  manifest  rust-toolchain.toml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: adapter.rs  ai.rs  code_actions.rs  main.rs  models.rs  plan.rs  rename.rs  scan.rs  status.rs
crates/kopitiam-ai/: Cargo.toml
crates/kopitiam-ai/src/: adapter.rs  cloud.rs  echo.rs  lib.rs  message.rs  stream.rs
crates/kopitiam-bibliography/: Cargo.toml
crates/kopitiam-bibliography/examples/: extract.rs
crates/kopitiam-bibliography/src/: anomaly.rs  author.rs  bibliography.rs  citation.rs  entry.rs  error.rs  extract.rs  hayagriva.rs  identifier.rs  knowledge.rs  lib.rs  provenance.rs  reference.rs  resolve.rs  text.rs
crates/kopitiam-bibliography/tests/: roundtrip.rs
crates/kopitiam-config/: Cargo.toml
crates/kopitiam-config/src/: lib.rs
crates/kopitiam-core/: Cargo.toml
crates/kopitiam-core/src/: device.rs  dtype.rs  error.rs  lib.rs  shape.rs
crates/kopitiam-document/: Cargo.toml
crates/kopitiam-document/src/: block.rs  citation.rs  document.rs  figure.rs  heading.rs  lib.rs  list.rs  paragraph.rs  table.rs
crates/kopitiam-finance/: Cargo.toml
crates/kopitiam-finance/src/: lib.rs
crates/kopitiam-gpu/: Cargo.toml  README.md
crates/kopitiam-gpu/src/: context.rs  executor.rs  lib.rs
crates/kopitiam-gpu/tests/: cascade.rs
crates/kopitiam-health/: Cargo.toml
crates/kopitiam-health/src/: compare.rs  cost_share.rs  domain.rs  extract.rs  facts.rs  lib.rs  money.rs  policy.rs  term.rs
crates/kopitiam-health/tests/: cost_share.rs  reading.rs
crates/kopitiam-index/: Cargo.toml
crates/kopitiam-index/src/: lib.rs  store.rs
crates/kopitiam-insurance/: Cargo.toml
crates/kopitiam-insurance/src/: anomaly.rs  classify.rs  clause.rs  crossref.rs  definition.rs  endorsement.rs  error.rs  exclusion.rs  ingest.rs  knowledge.rs  lib.rs  policy.rs  provenance.rs  schedule.rs
crates/kopitiam-insurance/tests/: synthetic_policy.rs
crates/kopitiam-internet-research/: Cargo.toml
crates/kopitiam-internet-research/src/: lib.rs
crates/kopitiam-knowledge/: Cargo.toml
crates/kopitiam-knowledge/src/: graph.rs  lib.rs
crates/kopitiam-legal/: Cargo.toml
crates/kopitiam-legal/src/: anomaly.rs  date.rs  definition.rs  error.rs  ingest.rs  instrument.rs  judgment.rs  lib.rs  numbering.rs  ontology.rs  provenance.rs  provision.rs  reference.rs  source.rs  synthetic.rs  temporal.rs
crates/kopitiam-legal/tests/: kinds_and_graph.rs  provenance_is_structural.rs  statute.rs  temporal.rs
crates/kopitiam-loader/: Cargo.toml
crates/kopitiam-loader/src/: byte_source.rs  gguf.rs  lib.rs  metadata.rs  model.rs  safetensors.rs
crates/kopitiam-loader/tests/: gguf.rs  safetensors.rs
crates/kopitiam-lua/: Cargo.toml
crates/kopitiam-lua/src/: ast.rs  compiler.rs  error.rs  instr.rs  lexer.rs  lib.rs  number.rs  parser.rs  pattern.rs  value.rs  vm.rs
crates/kopitiam-lua/tests/: coroutines.rs  language.rs  maintainer_config.rs  stdlib.rs
crates/kopitiam-models/: Cargo.toml
crates/kopitiam-models/src/: catalog.rs  error.rs  fetch.rs  hf.rs  lib.rs  store.rs
crates/kopitiam-models/tests/: acquire.rs  huggingface.rs
crates/kopitiam-mux/: Cargo.toml  NOTICE  README.md  build.rs  nextest.toml
crates/kopitiam-mux/scripts/: ratatui-rmux-budget.sh  smoke-config-corpus.sh  windows_ctrl_matrix.ps1
crates/kopitiam-mux/src/: cli.rs  cli_args.rs  cli_args_config_tests.rs  cli_args_layout_tests.rs  cli_args_tests.rs  cli_args_zoom_tests.rs  cli_response.rs  client_terminal.rs  daemon_main.rs  main.rs  os_string.rs  process_locale.rs  server_runtime.rs  tiny_main.rs  tmux_error_surface.rs
crates/kopitiam-mux/tests/: acceptance_cli_matrix.rs  acceptance_source_config_matrix.rs  acceptance_target_format_matrix.rs  automation_cli.rs  automation_cli_windows.rs  buffer_files.rs  buffers.rs  canonical_workflow.rs  capture.rs  cli_attach_flow.rs  cli_claude_launcher.rs  cli_claude_launcher_windows.rs  cli_claude_skill.rs  cli_pane_transfer_surface.rs  cli_surface.rs  cli_target_actions.rs  cli_window_surface.rs  config_corpus_script.rs  control_mode_windows.rs  diagnose_acceptance.rs  display_message.rs  formats.rs  internal_daemon.rs  internal_daemon_windows.rs  issue8_interactive_exit.rs  list_panes.rs  manpage_surface.rs  request_end_to_end.rs  scripting.rs  scripting_sdk.rs  sessions.rs  sixel_passthrough.rs  socket_dropin.rs  stress.rs  subscriptions_concurrent.rs  tmux_compat_harness.rs  unix_background_lifecycle_acceptance.rs  unix_daemon_resource_acceptance.rs  unix_pty_resize_acceptance.rs  unix_source_file_tmux_oracle.rs  (+9 more)
crates/kopitiam-neovim/: Cargo.toml  README.md
crates/kopitiam-neovim/docs/: quickstart.md
crates/kopitiam-neovim/src/: config.rs  core.rs  icons.rs  lib.rs  main.rs  termemu.rs  tmux.rs
crates/kopitiam-ontology/: Cargo.toml
crates/kopitiam-ontology/src/: entity.rs  id.rs  lib.rs  relationship.rs
crates/kopitiam-pdf/: Cargo.toml
crates/kopitiam-pdf/src/: extractor.rs  font.rs  font_resources.rs  geometry.rs  lib.rs  page.rs
crates/kopitiam-pdf/tests/: font_resolution.rs
crates/kopitiam-plot/: Cargo.toml
crates/kopitiam-plot/examples/: digitise.rs
crates/kopitiam-plot/src/: axes.rs  content.rs  digitise.rs  export.rs  geometry.rs  knowledge.rs  labels.rs  lib.rs  series.rs  style.rs
crates/kopitiam-plot/tests/: coordinate_space.rs  roundtrip.rs
crates/kopitiam-resource/: Cargo.toml
crates/kopitiam-resource/src/: budget.rs  calibration.rs  clients.rs  fetched.rs  lib.rs  probe.rs  project.rs
crates/kopitiam-runtime/: Cargo.toml
crates/kopitiam-runtime/src/: attention.rs  block.rs  bridge.rs  config.rs  constraint.rs  generate.rs  gguf_tokenizer.rs  kv_cache.rs  lib.rs  linear.rs  mlp.rs  model.rs  rope.rs  sampling.rs  test_support.rs  traits.rs  weights.rs
crates/kopitiam-search/: Cargo.toml
crates/kopitiam-semantic/: Cargo.toml
crates/kopitiam-snippet/: Cargo.toml
crates/kopitiam-syntax/: Cargo.toml
crates/kopitiam-tensor/: Cargo.toml
(+1315 files in other folders)
