[package]
name = "kopitiam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-first Semantic Runtime CLI for scientific Rust projects: real cargo/rust-analyzer/rustdoc facts, rust-analyzer-backed rename and code actions, and a PDF-to-Markdown document engine."
readme = "README.md"
keywords = ["rust-analyzer", "semantic", "lsp", "scientific-computing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
kopitiam-pdf = { workspace = true }
kopitiam-document = { workspace = true }
kopitiam-markdown = { workspace = true }
kopitiam-ontology = { workspace = true }
kopitiam-semantic = { workspace = true }
kopitiam-knowledge = { workspace = true }
kopitiam-index = { workspace = true }
kopitiam-workspace = { workspace = true }
kopitiam-workflow = { workspace = true }
kopitiam-ai = { workspace = true }
kopitiam-models = { path = "../../crates/kopitiam-models" }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# Used by adapter-selection tests to build throwaway model stores in a
# tempdir, so presence/absence decisions are exercised without touching the
# user's real ~/.cache/kopitiam/models.
tempfile = { workspace = true }
