[package]
name = "kopitiam-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The ~/.kopitiam per-user directory convention shared by every KOPITIAM application."

[dependencies]
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
