[package]
name = "kopitiam-core"
# Seeded onto crates.io at 0.0.1 as an early name reservation while the Kopitiam
# Runtime is still mid-build — deliberately BEHIND the workspace version so the
# real release (0.1.x, in lockstep with the rest) supersedes it later. Overrides
# `version.workspace` on purpose; see scripts/publish-runtime-seed.sh.
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives (dtypes, shapes, devices, errors) for the Kopitiam Runtime, KOPITIAM's CPU-first local inference engine."

[dependencies]
thiserror.workspace = true
