[package]
name = "kopitiam-finance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "KOPITIAM finance domain engine: turns policy and scheme documents into structured, provenance-carrying knowledge."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
kopitiam-ontology.workspace = true
kopitiam-pdf.workspace = true
kopitiam-document.workspace = true

[dev-dependencies]
tempfile.workspace = true
